[tool.poetry]
name = "pglet-form-manual"
version = "0.1.0"
description = ""
authors = ["Mikael Honkala <mikael.honkala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pglet = ">=0.4.6"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
